CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(media-data C)

# install media-data
# NEW FOLDER POLICY
INSTALL(DIRECTORY ${CMAKE_BINARY_DIR}/data/Images DESTINATION media PATTERN "*" PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_WRITE GROUP_EXECUTE WORLD_READ WORLD_WRITE WORLD_EXECUTE)
INSTALL(DIRECTORY ${CMAKE_BINARY_DIR}/data/Videos DESTINATION media PATTERN "*" PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_WRITE GROUP_EXECUTE WORLD_READ WORLD_WRITE WORLD_EXECUTE)
INSTALL(DIRECTORY ${CMAKE_BINARY_DIR}/data/Sounds DESTINATION media PATTERN "*" PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_WRITE GROUP_EXECUTE WORLD_READ WORLD_WRITE WORLD_EXECUTE)
INSTALL(DIRECTORY ${CMAKE_BINARY_DIR}/data/Music DESTINATION media PATTERN "*" PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_WRITE GROUP_EXECUTE WORLD_READ WORLD_WRITE WORLD_EXECUTE)
INSTALL(DIRECTORY ${CMAKE_BINARY_DIR}/data/Downloads DESTINATION media PATTERN "*" PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_WRITE GROUP_EXECUTE WORLD_READ WORLD_WRITE WORLD_EXECUTE)
INSTALL(DIRECTORY ${CMAKE_BINARY_DIR}/data/DCIM DESTINATION media PATTERN "*" PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_WRITE GROUP_EXECUTE WORLD_READ WORLD_WRITE WORLD_EXECUTE)
INSTALL(DIRECTORY ${CMAKE_BINARY_DIR}/data/Documents DESTINATION media PATTERN "*" PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_WRITE GROUP_EXECUTE WORLD_READ WORLD_WRITE WORLD_EXECUTE)
INSTALL(DIRECTORY ${CMAKE_BINARY_DIR}/data/Others DESTINATION media PATTERN "*" PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_WRITE GROUP_EXECUTE WORLD_READ WORLD_WRITE WORLD_EXECUTE)

# install media-data database 
## thumbnails
INSTALL(DIRECTORY ${CMAKE_BINARY_DIR}/data/etc/thumb/ DESTINATION share/media/.thumb)


